--- a/Network Anamoly.ipynb
+++ b/Network Anamoly.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Applying the Hypergeometric Distribution to Social Network Graphs\n",
-    "#### Michael Lanier NGA DCD\n",
+    "#### Michael Lanier\n",
     "#### 6/17/2019"
    ]
   },
