--- a/sat/1 - Preview xView Data.ipynb
+++ b/sat/1 - Preview xView Data.ipynb
@@ -31,6 +31,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -51,8 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = gcv.data.RecordFileDetection('../CV-Data/train_demo.rec')\n",
-    "val = gcv.data.RecordFileDetection('../CV-Data/val_demo.rec')"
+    "train = gcv.data.RecordFileDetection('./CV-Data/train_demo.rec')\n",
+    "val = gcv.data.RecordFileDetection('./CV-Data/val_demo.rec')"
    ]
   },
   {
@@ -84,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd55c668f98>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f22681eed30>"
       ]
      },
      "execution_count": 5,
@@ -115,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will zoom in on the top Left"
+    "Notice this dataset, can you see the labels? We will zoom in on the top Left"
    ]
   },
   {
@@ -126,7 +133,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd55bba6c50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f226772c5f8>"
       ]
      },
      "execution_count": 6,
@@ -160,7 +167,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd55b217cf8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2266d96240>"
       ]
      },
      "execution_count": 7,
@@ -197,7 +204,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd55356ca90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f225eedba90>"
       ]
      },
      "execution_count": 8,
@@ -226,6 +233,15 @@
     "img_small = mx.image.fixed_crop(img,x,y,size,size)\n",
     "lbl_small = gcv.data.transforms.bbox.crop(lbl,(x,y,size,size))\n",
     "gcv.utils.viz.plot_bbox(img_small,lbl_small[:,:-1],labels=lbl_small[:,-1],ax=ax,class_names=classes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## End of Notebook 1: Data Preview\n",
+    "\n",
+    "The next notebook in the series will do the data preprocessing required for training our ML model."
    ]
   },
   {
