--- a/sat/2 - Chip Data.ipynb
+++ b/sat/2 - Chip Data.ipynb
@@ -30,8 +30,8 @@
    "outputs": [],
    "source": [
     "#Now we will use RecordIO formatted Data Files\n",
-    "train = gcv.data.RecordFileDetection('../CV-Data/train_demo.rec')\n",
-    "val = gcv.data.RecordFileDetection('../CV-Data/val_demo.rec')"
+    "train = gcv.data.RecordFileDetection('./CV-Data/train_demo.rec')\n",
+    "val = gcv.data.RecordFileDetection('./CV-Data/val_demo.rec')"
    ]
   },
   {
@@ -123,7 +123,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe5f024c6a0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3d95dcf780>"
       ]
      },
      "execution_count": 7,
@@ -181,8 +181,8 @@
    "outputs": [],
    "source": [
     "#Reload the datasets\n",
-    "train = gcv.data.RecordFileDetection('../CV-Data/train_demo.rec')\n",
-    "val = gcv.data.RecordFileDetection('../CV-Data/val_demo.rec')\n",
+    "train = gcv.data.RecordFileDetection('./CV-Data/train_demo.rec')\n",
+    "val = gcv.data.RecordFileDetection('./CV-Data/val_demo.rec')\n",
     "size = 208"
    ]
   },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -403,6 +403,15 @@
     "ax = fig.add_subplot(1,1,1)\n",
     "gcv.utils.viz.plot_bbox(img,lbl[:,:-1],labels=lbl[:,-1],ax=ax,class_names=classes)\n",
     "i+=1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## End of Data Preprocessing notebook\n",
+    "\n",
+    "In the next notebook we will train our gluoncv yolo model on our newly pre-processed data."
    ]
   },
   {
